--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>p5 skeleton</title>
 </head>
 <body style="margin:0; overflow: hidden;">
+    <div id="canvasContainer"></div>
+    <div id="uiContainer">
+        
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js" integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ==" crossorigin="anonymous"></script>
     <script src="sandbox.js"></script>
+    <script src="ui.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
